--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -5,8 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-		<title><%= htmlWebpackPlugin.options.title %></title>
-		<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<!--		<title><%= htmlWebpackPlugin.options.title %></title>-->
+        <title>Camping Planner</title>
+        <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/pr
+		od/postcode.v2.js"></script>
 		<script
 			type="text/javascript"
 			src="https://code.jquery.com/jquery-1.12.4.min.js"
